--- a/style.css
+++ b/style.css
@@ -13,11 +13,18 @@ body {
 }
 
 .container {
+  align-items: center;
+  flex-direction: column;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
   width: 95%;
   margin: auto;
 }
 
 .nav {
+  align-items: center;
+  flex-direction: column;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -27,10 +34,11 @@ body {
 
 .nav h2 {
   font-size: 2rem;
+  margin: 16px 0;
 }
 
 .user-input {
-  width: 350px;
+  width: 450px;
   text-align: center;
 }
 
@@ -84,7 +92,7 @@ body {
   border-radius: 2px;
   padding: 16px;
   color: #454545;
-  margin-top: 10px;
+  margin-top: 16px;
   font-size: 1rem;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
@@ -116,16 +124,12 @@ body {
   background-color: lightgray;
   border: 1px solid lightgray;
   border-radius: 5px;
+  margin: 16px 0;
 }
 
 @media (max-width: 768px) {
-  .nav {
-    align-items: center;
-    flex-direction: column;
-  }
-
   .nav h2 {
-    margin: 10px 0;
+    margin: 8px 0;
   }
 
   .user-input {
